# AEROSTACK

./: .dev-stack  .dockerignore  .gitignore  .stop-stack  Aerostack-MODULAR-PLATFORM-VISION.md  Aerostack-QUICK-REF.md  CHANGELOG.md  Makefile  PRD-REGISTRY-FIRST-AGENT-DEPLOYMENT.md  README.md  amplify.yml  cleanup.sh  docker-compose.yml  flow-architecture.txt  items-lines.json  package.json  people-hiring-call-transcript.txt  people-hriging-loop.md  pnpm-lock.yaml  pnpm-workspace.yaml  start.sh  stop-all.sh  turbo.json
tools-api/: pyproject.toml
tools-api/functions/accreditations/: handler.py
tools-api/functions/agents/: handler.py
tools-api/functions/builder/: handler.py
tools-api/functions/content/: handler.py  kb_client.py  linkedin_ugc_contract.py  scheduled_publish.py
tools-api/functions/content-publisher/: handler.py
tools-api/functions/copilot/: index.ts  package.json  pnpm-lock.yaml  tsconfig.json
tools-api/functions/csat/: handler.py
tools-api/functions/delivery/: handler.py
tools-api/functions/email-extract/: handler.py
tools-api/functions/knowledge/: handler.py
tools-api/functions/opps/: handler.py
tools-api/functions/org-sync/: handler.py
tools-api/functions/perspex/: handler.py
tools-api/functions/slack-inviter/: handler.py  slack-app-manifest.yaml
tools-api/functions/sow/: handler.py
tools-api/functions/workspace-admin/: handler.py
tools-api/functions/zoom-recording-automation/: README.md  handler.py  (+2 more)
tools-api/shared/: models.py  registry_client.py
tools-api/tests/: test_flaky.py  test_linkedin_ugc_contract.py
(+612 files in other folders)
