[project]
name = "aerostack-tools-api"
version = "0.1.0"
description = "Aerostack Tools - Serverless API + Bedrock AgentCore agents"
requires-python = ">=3.12"
dependencies = [
    "aws-cdk-lib>=2.170.0",
    "constructs>=10.0.0",
    "boto3>=1.35.0",
    "aws-lambda-powertools>=3.0.0",
    "copilotkit>=0.1.78",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "boto3-stubs",
]
agents = [
    "strands-agents",
    "strands-agents-tools",
    "bedrock-agentcore",
]
